# ReadFlow

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
.claude/: settings.json
.claude/hooks/: check-remaining-tasks.sh  enforce-scope.sh  verify-git-identity.sh  verify-task-quality.sh
.harness/: claude-progress.txt  context_summary.md  features.json  harness.json  init.sh
readflow/api/: pyproject.toml
readflow/api/app/: config.py  dependencies.py  exceptions.py  main.py
readflow/api/app/core/: one_api_client.py
readflow/api/app/models/: base.py  content.py
readflow/api/app/routers/: chat.py  content.py
readflow/api/app/schemas/: chat.py  content.py
readflow/api/app/services/: chat_service.py  chunk_service.py  context_builder.py  pdf_service.py  vector_service.py
readflow/api/app/tests/: conftest.py
readflow/api/app/tests/integration/: test_chat_endpoint.py  test_index_endpoint.py  test_upload_endpoint.py
readflow/api/app/tests/unit/: test_chat_router.py  test_chat_service.py  test_chunk_service.py  test_context_builder.py  test_dependencies_and_exceptions.py  test_one_api_client.py  test_pdf_service.py  test_schemas.py  test_vector_service.py
