[project]
name = 'readflow-api'
version = '0.1.0'
description = 'ReadFlow backend API'
requires-python = '>=3.10'
dependencies = [
    'fastapi>=0.110.0',
    'uvicorn[standard]>=0.27.0',
    'sqlalchemy[asyncio]>=2.0.0',
    'alembic>=1.13.0',
    'asyncpg>=0.29.0',
    'pydantic>=2.0.0',
    'pydantic-settings>=2.0.0',
    'pypdf>=4.0.0',
    'python-multipart>=0.0.9',
    'httpx>=0.26.0',
]

[project.optional-dependencies]
dev = [
    'pytest>=8.0.0',
    'pytest-asyncio>=0.23.0',
    'pytest-cov>=4.1.0',
    'httpx>=0.26.0',
    'black>=24.0.0',
    'isort>=5.13.0',
    'reportlab>=4.0.0',
    'aiosqlite>=0.19.0',
]

[build-system]
requires = ['setuptools>=61.0', 'wheel']
build-backend = 'setuptools.build_meta'

[tool.setuptools.packages.find]
where = ['app']

[tool.black]
line-length = 100
skip-string-normalization = true
target-version = ['py310']

[tool.isort]
profile = 'black'
line_length = 100

[tool.pytest.ini_options]
asyncio_mode = 'auto'
testpaths = ['app/tests']
addopts = '--cov=app --cov-report=term-missing --cov-fail-under=95'

[tool.coverage.run]
source = ['app']
omit = ['app/tests/*']

[tool.coverage.report]
fail_under = 95
show_missing = true
skip_covered = false
